samples/_failures_safe/1761390866_877a63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1042e01e.c: In function ‘main’:
./samples/SAFE/__tmp_1042e01e.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("\nVerification: FAILED - Data mismatch\n");
      |         ^~~~~~
./samples/SAFE/__tmp_1042e01e.c:150:9: error: expected declaration or statement at end of input
